<resources>
    <string name="gp_app_token">818864099682-45o7guahod4e27offl7pugq0tqf6augr.apps.googleusercontent.com</string>
    <string name="server_address">https://blazern.me/broccalc</string>

    <string name="app_name">Broccalc</string>
    <string name="count">Рассчитать</string>
    <string name="product_weight">Масса</string>
    <string name="protein">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbs">Углеводы</string>
    <string name="calories">Калории</string>
    <string name="weight_of_cooked_product">Масса готового продукта:</string>
    <string name="ok">OK</string>
    <string name="product_name">Название продукта</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="enter_recipe_name">Введите название рецепта</string>
    <string name="recipe_name">Название рецепта</string>
    <string name="start">Для добавления продукта нажмите на +</string>
    <string name="search">Поиск…</string>
    <string name="calculator">Калькулятор</string>
    <string name="list_of_foodstuffs">Продукты</string>
    <string name="per_100_g">(на 100 грамм)</string>
    <string name="history">Журнал</string>
    <string name="pref_first_start">is it the first start</string>
    <string name="welcome">Добро пожаловать! Для начала укажите информацию о себе для рассчёта нормы калорий и БЖУ.</string>
    <string name="goal">Цель</string>
    <string name="gender">Пол</string>
    <string name="age">Возраст</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="physical_activity">Коэффициент физ. активности:</string>
    <string name="formula">Формула рассчета калорий</string>
    <string name="set_goal">Настройка цели</string>
    <string name="calc_result_dialog_text">Масса готового продукта - %1$.1f грамм\n
        Белки - %2$.1f\n
        Жиры - %3$.1f\n
        Углеводы - %4$.1f\n
        Калорийность - %5$.1f\n</string>
    <string name="foodstuff_name_and_weight">%1$s, %2$.0f г</string>
    <string name="user_goal_finish_button_text">далее</string>
    <string name="top_header">Популярное</string>
    <string name="all_foodstuffs_header">Все продукты</string>
    <string name="foodstuffs">Продукты</string>
    <string name="profile">Профиль</string>
    <string name="create_new_foodstuff">Новый</string>
    <string name="weight_in_card">Масса, граммов</string>
    <string name="add_foodstuff">Добавить продукт</string>
    <string name="add_foodstuff_to_recipe">В рецепт</string>
    <string name="add_foodstuff_to_history">В журнал</string>
    <string name="selected_foodstuffs_snackbar_title_recipe_creation">Создание рецепта</string>
    <string name="selected_foodstuffs_snackbar_title_recipe_editing">Редактирование рецепта</string>
    <string name="bucket_list_title_recipe_creation">Новый рецепт</string>
    <string name="bucket_list_title_recipe_editing">Редактирование</string>
    <string name="bucket_list_title_recipe">Рецепт</string>
    <string name="bucket_list_title_cooking">Рассчёт соотношений</string>
    <string name="meal">Приём пищи</string>
    <string name="meal_notification">Не забудьте внести в приложение, что вы кушали</string>
    <string name="channel_name">Напоминание о приеме пищи</string>
    <string name="save_recipe">Сохранить рецепт</string>
    <string name="add_to_history">Добавить в журнал</string>
    <string name="future_recipe_nutrition">Пищевая ценность рецепта (на 100 г)</string>
    <string name="name">Название</string>
    <string name="saved">Сохранено</string>
    <string name="foodstuff_already_exists">Такой продукт уже существует</string>
    <string name="result_weight">Масса готового продукта, граммов:</string>
    <string name="new_foodstuff">Новый продукт</string>
    <string name="nutrition_per_100_g">Белки, жиры и углеводы указаны на 100 г</string>
    <string name="undo">Отмена</string>
    <string name="foodstuff_deleted">Продукт удалён</string>
    <string name="work_with_recipe_canceled">Работа с рецептом прекращена</string>
    <string name="change_foodstuff">Изменить продукт</string>
    <string name="search_results">Результаты поиска \"%s\"</string>
    <string name="add_new_foodstuff">Добавить новый продукт</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="calorie_intake">Норма калорий:</string>
    <string name="set_current_weight">Изменить текущий вес</string>
    <string name="recommended_nutrition_ratio">Рекомендуемое БЖУ</string>
    <string name="how_it_is_calculated">Рассчитывается по формуле</string>
    <string name="last_measurements_date">Дата последних измерений</string>
    <string name="user_weight_with_colon">Вес:</string>
    <string name="hips_with_colon">Бёдра:</string>
    <string name="chest_with_colon">Грудь:</string>
    <string name="waist_with_colon">Талия:</string>
    <string name="user_weight">Вес</string>
    <string name="reached">Достигнуто</string>
    <string name="percent">%</string>
    <string name="set_user_params">Изменить данные</string>
    <string name="personal_data">Личные данные</string>
    <string name="user_name">Имя</string>
    <string name="user_surname">Фамилия</string>
    <string name="information">Информация</string>
    <string name="user_goal">Цель</string>
    <string name="lifestyle">Образ жизни</string>
    <string name="statistics">Статистические данные</string>
    <string name="fill_all_fields">Заполните все поля</string>

    <string name="losing_weight">Снижение веса</string>
    <string name="maintaining_current_weight">Сохранение веса</string>
    <string name="mass_gathering">Набор веса</string>

    <string name="male">Мужской</string>
    <string name="female">Женский</string>

    <string name="passive_lifestyle">Сидячий образ жизни</string>
    <string name="insignificant_activity">Умеренная активность</string>
    <string name="medium_activity">Средняя активность</string>
    <string name="active_lifestyle">Высокая активность</string>
    <string name="professional_sports">Очень высокая активность</string>

    <string name="harris_benedict">Харриса-Бенедикта</string>
    <string name="mifflin_jeor">Миффлина-Джеора</string>

    <string name="target_weight">Желаемый вес</string>
    <string name="kg">\ кг</string>
    <string name="cm">\ см</string>
    <string name="kcal">\ ккал</string>
    <string name="years">\ лет</string>
    <string name="last_measurements">Предыдущее значение на %s</string>
    <string name="new_measurements">Текущее значение на %s</string>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="progress">Прогресс</string>
    <string name="weight_change">Изменение веса, кг</string>
    <string name="total_for_day">Всего за день</string>
    <string name="of_n_grams">из %d г</string>
    <string name="of_n_calories">из %d ккал</string>
    <string name="period">Период</string>

    <string name="user_measurements_period_array_all_time">За всё время</string>
    <string name="user_measurements_period_array_year">За год</string>
    <string name="user_measurements_period_array_6_months">За пол года</string>
    <string name="user_measurements_period_array_month">За месяц</string>

    <string name="return_today">Сегодня</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="day_after_tomorrow">Послезавтра</string>
    <string name="yesterday">Вчера</string>
    <string name="day_before_yesterday">Позавчера</string>
    <string name="n_calories">%sккал</string>
    <string name="n_gramms">%dг</string>

    <string name="privacy_policy">Политика\nконфиденциальности</string>
    <string name="privacy_policy_address">https://docs.google.com/document/d/1H2mWhrd1rBVvFluqyf6SI2zsWqFnXbMrnnHas_zf9z0</string>

    <string name="foodstuff_deletion_are_you_sure_dialog_title">Вы уверены?</string>
    <string name="foodstuff_deletion_are_you_sure_positive_response">Удалить</string>
    <string name="foodstuff_deletion_are_you_sure_negative_response">Отмена</string>

    <string name="add_foodstuff_to_other_date_dialog_title">Добавить продукт на %s?</string>
    <string name="add_foodstuff_to_other_date_dialog_other_date_response">На %s</string>
    <string name="add_foodstuff_to_other_date_dialog_current_day_response">На сегодня</string>
    <string name="partners_list">Партнёры</string>
    <string name="gp_account_move_request">Аккаунт Google привязан к другому устройству, перепривязать к этому?</string>
    <string name="gp_account_move_request_confirmation">Да</string>
    <string name="gp_account_move_request_cancellation">Отмена</string>
    <string name="you_do_not_have_partners">Нет партнёров</string>
    <string name="your_pairing_code">Ваш код:</string>
    <string name="your_partner_pairing_code">Код партнёра:</string>
    <string name="send_to_partner">Отправить партнёру</string>
    <string name="delete_partner">Удалить партнёра</string>
    <string name="delete_ingredient">Удалить ингредиент</string>
    <string name="edit_ingredient_comment">Изменить комментарий</string>
    <string name="add_ingredient">Добавить ингредиент</string>
    <string name="sign_in_with_google">Войти с Google</string>
    <string name="something_went_wrong">Упс, что-то пошло не так</string>
    <string name="possibly_no_network_connection">Возможно интернет не подключен</string>
    <string name="your_code_is_valid_for">Ваш код действителен ещё:</string>
    <string name="successfully_paired_with">Добавлен новый партнёр: %s</string>
    <string name="successfully_paired_with_multiple_partners">Добавлены новые партнёры</string>
    <string name="pairing_request_sent">Запрос отправлен</string>
    <string name="obtain_pairing_code">Получить код</string>
    <string name="partner_with_code_not_found">Пользователь с кодом %s не найден</string>
    <string name="foodstuff_is_sent">Продукт отправлен</string>
    <string name="foodstuff_is_received">Получен продукт: %s</string>
    <string name="show_received_foodstuff">Показать</string>

    <string name="cancel_recipe_creation_dialog_title">Удалить создаваемый рецепт?</string>
    <string name="cancel_recipe_editing_dialog_title">Удалить внесённые изменения?</string>
    <string name="cancel_recipe_dialog_confirmation">Да</string>
    <string name="cancel_recipe_dialog_cancellation">Отмена</string>

    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris. Integer in mauris eu nibh euismod gravida. Duis ac tellus et risus vulputate vehicula. Donec lobortis risus a elit. Etiam tempor. Ut ullamcorper, ligula eu tempor congue, eros est euismod turpis, id tincidunt sapien risus a quam. Maecenas fermentum consequat mi. Donec fermentum. Pellentesque malesuada nulla a mi. Duis sapien sem, aliquet nec, commodo eget, consequat quis, neque. Aliquam faucibus, elit ut dictum aliquet, felis nisl adipiscing sapien, sed malesuada diam lacus eget erat. Cras mollis scelerisque nunc. Nullam arcu. Aliquam consequat. Curabitur augue lorem, dapibus quis, laoreet et, pretium ac, nisi. Aenean magna nisl, mollis quis, molestie eu, feugiat in, orci. In hac habitasse platea dictumst.</string>
    <string name="comment">Комментарий</string>
    <string name="user_weight_invalid_format">Упс, с весом что-то не то!</string>
    <string name="user_weight_too_small">Что-то вес маловат!</string>
    <string name="user_weight_too_big">Что-то вес великоват!</string>
    <string name="user_height_invalid_format">Упс, с ростом что-то не то!</string>
    <string name="user_height_too_small">Что-то рост маловат!</string>
    <string name="user_height_too_big">Что-то рост великоват!</string>

    <string-array name="physical_activity_array">
        <item name="passive_lifestyle">Сидячий образ жизни</item>
        <item name="insignificant_activity">Умеренная активность</item>
        <item name="medium_activity">Средняя активность</item>
        <item name="active_lifestyle">Высокая активность</item>
        <item name="professional_sports">Очень высокая активность</item>
    </string-array>

    <string-array name="physical_activity_description_array">
        <item name="passive_lifestyle">Без физических нагрузок</item>
        <item name="insignificant_activity">Легкие физические нагрузки либо занятия 1–3 раза в неделю</item>
        <item name="medium_activity">Занятия 3–5 раз в неделю</item>
        <item name="active_lifestyle">Интенсивные нагрузки, занятия 6–7 раз в неделю</item>
        <item name="professional_sports">Спортсмены и работники тяжелого физического труда</item>
    </string-array>

    <string-array name="formula_array">
        <item name="harris_benedict">Харриса-Бенедикта</item>
        <item name="mifflin_jeor">Миффлина-Джеора</item>
    </string-array>

    <string-array name="history_period_array">
        <item name="day">День</item>
        <item name="week">Неделя</item>
        <item name="month">Месяц</item>
        <item name="year">Год</item>
    </string-array>

    <string-array name="user_measurements_period_array">
        <item name="all_time">@string/user_measurements_period_array_all_time</item>
        <item name="year">@string/user_measurements_period_array_year</item>
        <item name="6_months">@string/user_measurements_period_array_6_months</item>
        <item name="month">@string/user_measurements_period_array_month</item>
    </string-array>
</resources>
