<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--прогресс-бар-->
    <korablique.recipecalculator.ui.pluralprogressbar.PluralProgressBar
        android:id="@+id/new_nutrition_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        custom:color0="@color/colorProtein"
        custom:color1="@color/colorFats"
        custom:color2="@color/colorCarbs"
        custom:corners_radii="10dp"
        custom:background_bar_color="@color/colorBackground"/>

    <!--табличка БЖУК-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <include
            android:id="@+id/protein_layout"
            layout="@layout/nutrition_layout_with_color"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <include
            android:id="@+id/fats_layout"
            layout="@layout/nutrition_layout_with_color"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <include
            android:id="@+id/carbs_layout"
            layout="@layout/nutrition_layout_with_color"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <include
            android:id="@+id/calories_layout"
            layout="@layout/nutrition_layout_with_color"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>