<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/foodstuff_card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:tag="calc_keyboard_parent">
<FrameLayout
...

        <FrameLayout
            android:id="@+id/frame_layout_button_edit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/button_close"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/rectangular_button_click_selector"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
...
